--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar" id="navbar" role="navigation" aria-label="Main navigation">
         <div class="nav-container">
             <a href="#home" class="nav-logo" aria-label="Home">
-                <span class="logo-bracket">&lt;</span>YN<span class="logo-bracket">/&gt;</span>
+                <span class="logo-bracket">&lt;</span>KMA<span class="logo-bracket">&gt;</span>
             </a>
             
             <button class="nav-toggle" id="nav-toggle" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="nav-menu">
@@ -48,8 +48,8 @@
             <div class="hero-container">
                 <div class="hero-content">
                     <p class="hero-greeting">Hello, I'm</p>
-                    <h1 id="hero-title" class="hero-title">Your Name</h1>
-                    <p class="hero-tagline">Computer Science Student & Engineering Programmer</p>
+                    <h1 id="hero-title" class="hero-title">Kenny Ma</h1>
+                    <p class="hero-tagline">Robotics Enthusiast</p>
                     <p class="hero-description">
                         I build efficient algorithms, analyze data, and create solutions to real-world engineering problems. 
                         Passionate about clean code and continuous learning.
