--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
                 <div class="hero-content">
                     <p class="hero-greeting">Hello, I'm</p>
                     <h1 id="hero-title" class="hero-title">Kenny Ma</h1>
-                    <p class="hero-tagline">Robotics Enthusiast</p>
+                    <p class="hero-tagline">Robotics Enthusiast & Entreprenuer</p>
                     <p class="hero-description">
-                        I build efficient algorithms, analyze data, and create solutions to real-world engineering problems. 
-                        Passionate about clean code and continuous learning.
+                        I design, build, and program robots. From autonomous navigation to custom PCBs and agent training. 
+                        I’m passionate about hands-on engineering, STEM education access, 
+                        and creating technology that’s both innovative and socially impactful.
                     </p>
                     <div class="hero-buttons">
                         <a href="#projects" class="btn btn-primary">View Projects</a>
@@ -133,12 +134,12 @@
                                     <span class="skill-tag">MATLAB</span>
                                     <span class="skill-tag">Java</span>
                                     <span class="skill-tag">Python</span>
-                                    <span class="skill-tag">JavaScript</span>
                                 </div>
                             </div>
                             <div class="skill-category">
                                 <h4>Concepts</h4>
                                 <div class="skill-tags">
+                                    <span class="skill-tag">ROS 2</span>
                                     <span class="skill-tag">Data Structures</span>
                                     <span class="skill-tag">Algorithms</span>
                                     <span class="skill-tag">Data Analysis</span>
@@ -148,6 +149,10 @@
                             <div class="skill-category">
                                 <h4>Tools</h4>
                                 <div class="skill-tags">
+                                     <span class="skill-tag">OnShape</span>
+                                     <span class="skill-tag">Fusion</span>
+                                     <span class="skill-tag">Isaac SIM</span>
+                                     <span class="skill-tag">Isaac Lab</span>
                                     <span class="skill-tag">Git</span>
                                     <span class="skill-tag">VS Code</span>
                                     <span class="skill-tag">Linux</span>
