--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Personal portfolio showcasing CS and engineering programming projects">
-    <title>Your Name | Software Developer Portfolio</title>
+    <title>Kenny Ma | Career Portfolio</title>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -107,18 +107,22 @@
                         <h3 class="about-subtitle">My Story</h3>
                         <!-- EDIT: Replace this placeholder text with your actual bio -->
                         <p>
-                            I'm a computer science student with a passion for solving complex problems through code. 
-                            My journey in programming started with introductory engineering courses, where I discovered 
-                            the power of algorithms and data analysis.
+                           I’m a mechanical engineering student with a long-standing passion for robotics and intelligent systems. 
+                            My interest began in high school, where joining my school’s robotics team introduced me to the power of 
+                            building machines that interact with the real world. What started as curiosity quickly turned into hands-on 
+                            experience across mechanical design, electronics, and programming.
                         </p>
                         <p>
-                            I enjoy working on projects that bridge theory and application—from optimizing routes 
-                            with graph algorithms to analyzing real-world datasets for meaningful insights. Every 
-                            project is an opportunity to learn something new and push my boundaries.
+                            Over the years, I’ve led robotics teams, founded a competitive rocketry program, 
+                            and worked on assistive robotics projects designed to increase accessibility for individuals with disabilities. 
+                            These experiences culminated in placing 1st at the 2024 China–U.S. Youth Robotics Innovation Event 
+                            and later interning at Rose City Robotics, where I developed SLAM-based systems, built simulated training 
+                            environments using NVIDIA Isaac Sim and Isaac Lab, and represented the company at the Oregon Innovation Showcase.
                         </p>
                         <p>
-                            When I'm not coding, you can find me exploring new technologies, contributing to open-source 
-                            projects, or mentoring fellow students in programming fundamentals.
+                            Today, I’m driven by the intersection of robotics, autonomy, and education, building systems 
+                            that are technically rigorous, socially impactful, and grounded in real-world use. Every project I 
+                            take on is an opportunity to learn, iterate, and push the boundaries of what thoughtful engineering can do.
                         </p>
                         <!-- END EDIT -->
                     </div>
@@ -140,6 +144,7 @@
                                 <h4>Concepts</h4>
                                 <div class="skill-tags">
                                     <span class="skill-tag">ROS 2</span>
+                                    <span class="skill-tag">Agent Traning</span>
                                     <span class="skill-tag">Data Structures</span>
                                     <span class="skill-tag">Algorithms</span>
                                     <span class="skill-tag">Data Analysis</span>
@@ -166,11 +171,10 @@
                         <h3 class="about-subtitle">Interests</h3>
                         <!-- EDIT: Replace with your actual interests -->
                         <ul class="interests-list">
-                            <li>Algorithm optimization and computational efficiency</li>
-                            <li>Data visualization and statistical analysis</li>
-                            <li>Cybersecurity and cryptography fundamentals</li>
-                            <li>Open-source software development</li>
-                            <li>Teaching and mentoring in STEM education</li>
+                            <li>Robotics, autonomy, and embodied intelligence</li>
+                            <li>SLAM, robot learning, and simulation-driven development</li>
+                            <li>Mechanical design, rapid prototyping, and system integration</li>
+                            <li>STEM education, mentorship, and community outreach</li>
                         </ul>
                         <!-- END EDIT -->
                     </div>
@@ -363,7 +367,7 @@
             <div class="footer-content">
                 <p class="footer-text">
                     <!-- EDIT: Update with your name and year -->
-                    &copy; 2024 Your Name. All rights reserved.
+                    &copy; 2026 KMA. All rights reserved.
                     <!-- END EDIT -->
                 </p>
                 <p class="footer-built">
