--- a/index.html
+++ b/index.html
@@ -210,8 +210,9 @@
                         <button class="filter-chip" data-filter="C++" aria-pressed="false">C++</button>
                         <button class="filter-chip" data-filter="Java" aria-pressed="false">Java</button>
                         <button class="filter-chip" data-filter="Data Analysis" aria-pressed="false">Data Analysis</button>
-                        <button class="filter-chip" data-filter="Algorithms" aria-pressed="false">Algorithms</button>
-                        <button class="filter-chip" data-filter="Security/Crypto" aria-pressed="false">Security/Crypto</button>
+                        <button class="filter-chip" data-filter="Data Analysis" aria-pressed="false">Robot</button>
+                        <button class="filter-chip" data-filter="Data Analysis" aria-pressed="false">Complete</button>
+                        <button class="filter-chip" data-filter="Data Analysis" aria-pressed="false">In-prograss</button>
                     </div>
                 </div>
                 
