--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
                                     <span class="skill-tag">MATLAB</span>
                                     <span class="skill-tag">Java</span>
                                     <span class="skill-tag">Python</span>
+                                    <span class="skill-tag">JavaScript</span>
+                                    <span class="skill-tag">HTML</span>
                                 </div>
                             </div>
                             <div class="skill-category">
