--- a/index.html
+++ b/index.html
@@ -61,29 +61,28 @@
                     </div>
                 </div>
                 <div class="hero-visual">
-                    <div class="code-window">
+                    <div class="code-window code-window--roboticist">
                         <div class="code-header">
                             <span class="code-dot red"></span>
                             <span class="code-dot yellow"></span>
                             <span class="code-dot green"></span>
-                            <span class="code-filename">developer.cpp</span>
+                            <span class="code-filename">Roboticist</span>
                         </div>
-                        <pre class="code-content"><code><span class="code-keyword">class</span> <span class="code-class">Developer</span> {
-<span class="code-keyword">public</span>:
-    Developer() {
-        skills = {<span class="code-string">"C++"</span>, 
-                  <span class="code-string">"MATLAB"</span>, 
-                  <span class="code-string">"Java"</span>};
-        passion = <span class="code-string">"∞"</span>;
-    }
-    
-    <span class="code-keyword">void</span> <span class="code-function">solveProblems</span>() {
-        <span class="code-keyword">while</span> (learning) {
-            code();
-            improve();
-        }
-    }
-};</code></pre>
+                        <div class="roboticist-content">
+                            <div class="roboticist-image-wrap">
+                                <img src="images/robot.png" alt="Robot" class="roboticist-image" width="240" height="240" />
+                            </div>
+                            <div class="roboticist-details">
+                                <p class="roboticist-label">Skills</p>
+                                <ul class="roboticist-competencies">
+                                    <li>Robots from Ideation to Creation</li>
+                                    <li>KiCAD · OnShape · Fusion 360</li>
+                                    <li>C++ · MATLAB · Java · Python</li>
+                                    <li>SLAM · Simulation · ROS 2 · Agent Traning</li>
+                                </ul>
+                                <p class="roboticist-passion">potential = <span class="roboticist-infinity">∞</span></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
